--- a/style/main.css
+++ b/style/main.css
@@ -66,3 +66,47 @@ body {
     border-radius: 10px;
     padding: 5px 13px;
 }
+
+/*sign up*/
+
+.login-left>.login-container {
+    position: relative;
+    top: 20%;
+    color: white;
+}
+
+.signup-form fieldset>input {
+    border-radius: 5px;
+    width: 100%;
+}
+
+.sign-up-btn {
+    background: black;
+    color: white;
+    padding: 5px 15px;
+    border: 0;
+    margin-top: 10px;
+}
+
+.signup-pg-text {
+    width: 50%;
+    color: tomato;
+    position: relative;
+    top: 30%;
+    font-size: 25px;
+}
+
+/*end of sign up section*/
+
+
+
+@media (max-width:770px) {
+    .signin-left {
+        visibility: hidden;
+        height: 0;
+    }
+    .login-container {
+        position: relative;
+        top: 10px;
+    }
+}
