--- a/style/main.css
+++ b/style/main.css
@@ -97,6 +97,97 @@ body {
 }
 
 /*end of sign up section*/
+/*----main nav----*/
+
+.brand-main {
+    color: black;
+    margin-left: 20px;
+    /* position: unset; */
+}
+
+.brand-main:hover {
+    color: white;
+}
+
+.fixed-top {
+    background: tomato;
+}
+
+.ml-auto .nav-item>a {
+    color: white;
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(77, 148, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.hidden-nav .nav-item .nav-link {
+    visibility: hidden;
+    color: white;
+}
+
+.navbar-collapse {
+    background: tomato;
+    z-index: 50;
+}
+
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 500;
+    top: 0;
+    left: 0;
+    background-color: tomato;
+    overflow-x: hidden;
+    padding-top: 100px;
+}
+
+.sidenav>ul {
+    list-style-type: none;
+    width: 100%;
+    padding-left: 20px;
+}
+
+.sidenav>ul>li {
+    padding: 10px 0;
+}
+
+.sidenav>ul>li>a {
+    color: white;
+    margin: auto;
+}
+
+.sidenav>ul>li>a:hover {
+    color: black;
+    text-decoration-line: none;
+}
+
+.sidenav>ul .active>a {
+    color: black;
+    font-size: 23px;
+}
+
+/*----end of main nav----*/
+
+/*profile*/
+
+.profile-sec {
+    display: block;
+    margin-left: 160px;
+    margin-top: 60px;
+    padding-left: 10px;
+}
+
+.profile-info {
+    padding: 0;
+}
+
+.profile-details>p {
+    font-size: 15px;
+}
+
+/*end of profile*/
 
 
 
