add 'add new book' template

--- a/style/main.css
+++ b/style/main.css
@@ -115,6 +115,7 @@ body {
 
 .ml-auto .nav-item>a {
     color: white;
+    font-size: 12px;
 }
 
 .navbar-toggler-icon {
@@ -299,7 +300,7 @@ body {
 /*history*/
 .history-sec{
     margin-left: 160px;
-    margin-top: 80px;
+    margin-top: 60px;
 }
 
 .history-table{
@@ -327,6 +328,54 @@ body {
 
 /*end of history*/
 
+
+/*addbook*/
+
+.addbook-sec{
+    margin-left: 160px;
+    margin-top: 60px;
+}
+
+.addbook-container{
+    width: 50%;
+    /* margin-top: 35%; */
+}
+
+.addbook_form >input, .addbook_form >textarea{
+    width: 100%;
+    margin: 15px 5px;
+}
+.addbook_form >select{
+    margin: 15px 15px;
+}
+.upload-cover-pic{
+    background: #47d147;
+    color: white;
+    border-radius: 10px;
+    border:none;
+}
+.upload-cover-pic:hover{
+    cursor: pointer;
+    font-size: 15px;
+}
+.savebook_btn, .addbook_btn{
+    border-radius: 10px;
+    border: none;
+}
+.savebook_btn:hover, .addbook_btn:hover{
+    cursor: pointer;
+    font-size: 18px;
+}
+.savebook_btn:hover{
+    color:tomato;
+}
+.addbook_btn{
+    background: tomato;
+    color: white;
+}
+
+
+/*addbook*/
 
 
 @media (max-width:770px) {
@@ -371,9 +420,7 @@ body {
         margin-left: 40px;
         margin-top: 60px;
     }
-    .borrowed-sec {
-        margin-left: 40px;
-    }
+    
     .borrowed-table {
         margin-top: 30px;
     }
@@ -382,11 +429,25 @@ body {
     }
 
     /*library*/
-    .lib-search, .library-sec {
+    .bk-cover-pic {max-width: 70%;}
+    .book-synopsis {font-size: 10px;max-width: 90%;}
+
+    /*general*/
+    .borrowed-sec,
+    .lib-search,
+    .library-sec,
+    .addbook-sec,
+    .history-sec {
         margin-left: 40px;
     }
-    .bk-cover-pic{max-width: 70%;}
-    .book-synopsis {font-size: 10px; max-width: 90%;}
+    
+
+    /*addbook*/
+
+    .addbook-container{
+        width: 100%;
+    }
+    
 
 }
 
