--- a/style/main.css
+++ b/style/main.css
@@ -2,9 +2,9 @@ html {
     height: 100%;
 }
 
-body {
+/* body {
     height: 100%;
-}
+} */
 
 .navbar {
     background: white;
@@ -262,6 +262,10 @@ body {
     margin-top: 70px;
 }
 
+.indv-book-deatails{
+    margin-bottom: 10px;
+}
+
 .lib-filter {
     background: #d9d9d9;
     padding: 10px 10px;
@@ -293,6 +297,8 @@ body {
 .book-sub-genre{color: black;}
 .copies-available {color: #47d147;}
 .book-synopsis{font-size:14px;}
+
+.borrow-icon >button >i{color: tomato;}
 /* .copies-tot{color: slategrey;} */
 
 /*end of library*/
