--- a/style/main.css
+++ b/style/main.css
@@ -337,8 +337,11 @@ html {
 
 /*addbook*/
 
-.addbook-sec,
-.updatebook-sec {
+.addbook-sec{
+    margin-left: 160px;
+    margin-top: 60px;
+}
+updatebook-sec {
     margin-left: 160px;
     margin-top: 60px;
 }
